[tool.poetry]
name = "sms-simulation"
version = "0.1.0"
description = "Simulates a service for sending a large number of SMS messages."
authors = ["Jared <jcoughlin11@proton.me>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
progress = "^1.6"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.6"
mypy = "^1.11.1"
pytest = "^8.3.2"
hypothesis = "^6.111.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
sms_simulation = 'sms_simulation.main:main'


[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "invalid-name",
  "too-few-public-methods",
  "too-many-arguments",
]


[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.nox
  | \.venv
  | build
  | dist
)/
'''
